# porta

./: .gitignore  CHANGELOG.md  HANDOFF.md  README.md
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml  windows.yml
release/: Porta_1.0.0_aarch64.dmg.sha256
release-notes/: v1.0.0.md  v1.1.0.md  v1.2.0.md
scripts/: qa-login-startup.sh  qa-release.sh
server-templates/: listing.html
site/: .nojekyll  index.html  script.js  sitemap.xml  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  drag_drop.rs  error_audit.rs  lib.rs  main.rs  provider.rs  server.rs  settings.rs  shares.rs  stats.rs  store.rs  tray.rs  tunnel.rs
src-tauri/tests/: live_tunnel_smoke.rs
src-tauri/tests/fixtures/: ipc_contract.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/components/: AddShareSheet.tsx  EmptyState.tsx  Icons.tsx  ProviderSettings.tsx  SettingsSheet.tsx  ShareCard.tsx
ui/src/lib/: ipc.ts  platform.test.ts  platform.ts  provider.test.ts
