[package]
name = "porta"
version = "0.1.0"
description = "A UI-first tunneling app for macOS"
authors = ["Porta contributors"]
edition = "2021"

[lib]
name = "porta_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keyring = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
