[package]
name = "porta"
version = "0.1.0"
description = "A UI-first tunneling app for macOS"
authors = ["Porta contributors"]
edition = "2021"

[lib]
name = "porta_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "multipart", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
keyring = "4.1"
libc = "0.2"
percent-encoding = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["fs", "io-util", "net", "sync", "time"] }
tower-http = { version = "0.7", features = ["fs"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
