[package]
name = "porta"
version = "1.2.0"
description = "A UI-first tunneling app for macOS and Windows"
authors = ["Porta contributors"]
edition = "2021"

[lib]
name = "porta_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "multipart", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
keyring = "4.1"
percent-encoding = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["fs", "io-util", "net", "sync", "time"] }
tower-http = { version = "0.7", features = ["fs"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
